--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -19,8 +19,8 @@ recent_comments: 最新评论
 
 read_more: 阅读全文
 
-contents: 文章目录
-none: 无
+newer: 上篇：
+older: 下篇：
 
 post_total_count: 目前共计%d篇文章
 category_total_count: 目前共计%d个分类
